--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,8 @@
 name: npm-publish
 on:
-  - push:
-      tags:
-        - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+#  - push:
+#      tags:
+#        - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
   - pull_request
 jobs:
   npm-publish:
@@ -21,7 +21,7 @@ jobs:
       - name: build
         run: pnpm build
       - name: npm login
-        run: pnpm set //registry.npmjs.org/:_authToken $NPM_AUTH_TOKEN
+        run: pnpm set //registry.npmjs.org/:_authToken ${NPM_AUTH_TOKEN}
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
       - name: Publish
