Change when the action is supposed to run

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,7 @@
 name: npm-publish
 on:
-#  - push:
-#      tags:
-#        - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
-  - pull_request
+  release:
+    types: [created]
 jobs:
   npm-publish:
     name: npm-publish
@@ -25,4 +23,4 @@ jobs:
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
       - name: Publish
-        run: pnpm publish --dry-run --no-git-checks --access public
+        run: pnpm publish --dry-run --access public
